Fix whitespace at the end of code blocks

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -18,11 +18,6 @@ strong {
 }
 
 code {
-  &::before,
-  &::after {
-    content: '\00a0';
-    letter-spacing: -0.4em;
-  }
   font-family: $ui-font-family;
   background: $black-10;
 
